--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -41,7 +41,7 @@ plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'))
 lynx_full$season <- (lynx_full$year %%19) + 1
 ```
 
-For `mvgam` models, the response needs to be labelled `y` and we also need an indicator of the series name as a `factor` variable
+For `mvgam` models, the response needs to be labelled `y` and we also need an indicator of the series name as a `factor` variable (if the column `series` is missing, this will be added automatically by assuming that all observations are from a single time series)
 ```{r}
 lynx_full$y <- lynx_full$population
 lynx_full$series <- factor('series1')
@@ -91,9 +91,24 @@ All of these plots indicate the model is well calibrated against the training da
 summary_mvgam(lynx_mvgam)
 ```
 
-Inspect the model's estimated smooth for the 19-year cyclic pattern, which is shown as a ribbon plot of posterior empirical quantiles
+Of course we should always inpsect traceplots when sampling from a posterior with `MCMC` methods. Here for the `GAM` component (smoothing parameters)
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_trace(lynx_mvgam, 'rho')
+```
+
+and for the latent trend component parameters
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_trace(lynx_mvgam, 'trend')
+```
+
+Inspect the model's estimated smooth for the 19-year cyclic pattern, which is shown as a ribbon plot of posterior empirical quantiles. We can also overlay partial residuals, which represent the leftover variation that the model expects would remain if this smooth term was dropped but all other parameters remained unchanged. Note that these are on a different scale to those from `mgcv::plot.gam` as these are randomised quantile residuals that are essentially standard normal in distribution. But either way, a strong pattern in the partial residuals suggests there would be strong patterns left unexplained in the model *if* we were to drop this term, giving us further confidence that this function is important in the model
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot_mvgam_smooth(lynx_mvgam, 1, 'season')
+plot_mvgam_smooth(lynx_mvgam, 1, 'season', residuals = T)
+```
+
+First derivatives of smooth functions can also be plotted to inspect how the slope of the function changes across its length
+```{r, fig.width=5, fig.height=6, fig.align='center'}
+plot_mvgam_smooth(lynx_mvgam, 1, 'season', derivatives = T)
 ```
 
 We can also view the mvgam's posterior retrodictions and predictions for the entire series (testing and training)
@@ -101,9 +116,9 @@ We can also view the mvgam's posterior retrodictions and predictions for the ent
 plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
 ```
 
-And the estimated latent trend component
-```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot_mvgam_trend(lynx_mvgam, data_test = lynx_test)
+And the estimated latent trend component, again with the option to show first derivatives
+```{r, fig.width=5, fig.height=6, fig.align='center'}
+plot_mvgam_trend(lynx_mvgam, data_test = lynx_test, derivatives = T)
 ```
 
 We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
