--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -140,7 +140,11 @@ plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'pit', data_test = lynx_test)
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test)
+plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test, legend_position = 'none')
+text(1, 0.2, cex = 1.5, label="GAM component", 
+     pos = 4, col="white", family = 'serif')
+text(1, 0.8, cex = 1.5, label="Trend component", 
+     pos = 4, col="#7C0000", family = 'serif')
 ```
 
 Both components contribute to forecast uncertainty, suggesting we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
